# Agentic_Ethereum_submission

./: .gitmodules  amplify.yaml  package.json
apps/nethermind/: package.json  tsconfig.json
apps/nethermind/sedge-agent/: Cargo.toml  ice9.example.toml
apps/nethermind/sedge-agent/src/: api.rs  main.rs
apps/web/: next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/components/: mainNav.tsx  navigation-button.tsx  site-footer.tsx  toggle-mode.tsx
apps/web/app/config/: header-options.ts  siteConfig.ts
apps/web/app/dashboard/: page.tsx
apps/web/app/notebook/[id]/: page.tsx
apps/web/app/notebook/new/: page.tsx
